--- a/src/components/FaceRecognition/FaceRecognition.sass
+++ b/src/components/FaceRecognition/FaceRecognition.sass
@@ -21,3 +21,10 @@
         p
             font-size: 5em;
             text-align: left;
+.Last
+    position: absolute;
+    font-size: 3em;
+    bottom: 3em;
+    left: 0;
+    right: 0;
+    margin: auto;
