--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400;700&display=swap');
 
 body {
+  height: 100vh;
+  overflow: hidden;
   background-color: #E0E0E0;
   text-transform: uppercase;
   margin: 0;
